--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 		</div>
 
 		<!-- The main Three.js file -->
-		<script src='https://cdnjs.cloudflare.com/ajax/libs/three.js/108/three.min.js'></script>
+		<script src='three.min.js'></script>
 		<!-- This brings in the ability to load custom 3D objects in the .gltf file format. Blender allows the ability to export to this format out the box -->
 		<script src='https://cdn.jsdelivr.net/gh/mrdoob/Three.js@r110/examples/js/loaders/GLTFLoader.js'></script>
 		<!-- script d'initialisation -->
